--- a/styles.css
+++ b/styles.css
@@ -535,3 +535,13 @@ body {
     margin-top: 30px;            /* Przestrzeń nad nagłówkiem */
     margin-bottom: 40px;         /* Przestrzeń pod nagłówkiem */
 }
+
+.infoceny {
+    display: center;
+}
+
+.infocen {
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+}
